# Large-Index-Expansion-CPP

./: #CMakeLists_full.txt  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakeLists_test.txt  CODE_STATUS_260504.md  Compare-CPPMeta-bub10.m  DEV_STATUS.md  NuFormat_Penta1L-5m.m  ReconstructAlgorithm.md  ReconstructReductionRelation.wl  SectorScanner  SectorScanner.cpp  Test-Expand.md  Test-Relation.md  VerifyRelation.wl  debug_eqn.m  debug_eqn_matrix.m  family_generate  session-checkpoint.skill  task-cppregsol-debug.md  task-manager.skill  test_ff_verify.cpp
.hermes/plans/: 2026-05-09_strategy-optimization.md
.opencode/plans/: 2026-05-11-per-region-order-design.md
archive/: CMakeLists_backup.txt  Plan-Ansatz-Redesign.md
archive/old_relations/: AllRelations_bub00_k8_pre_bugfix.m
cache/: SR212-5m_scheduled  TB123_scheduled
cache/DB313_scheduled/: status.json
cache/SR212-5m_scheduled/: status.json
cache/SR2123m_reduce_1/: ibp.log.out  ibp.wl  reductionDataInfo.log.out  reductionDataInfo.wl  reductionDataInfosup.log.out  reductionDataInfosup.wl  system.json  systemC.json  target  topology.wl
cache/SR2123m_sectormappings/: maximalcutmasters.log.out  maximalcutmasters.wl
cache/SR212m3_reduce_1/: ibp.log.out  ibp.wl  reductionDataInfo.log.out  reductionDataInfo.wl  reductionDataInfosup.log.out  reductionDataInfosup.wl  target  topology.wl
cache/SR212m3_sectormappings/: config  maximalcutmasters.log.out  maximalcutmasters.wl
cache/TB123_scheduled/: status.json
cache/bub00_reduce_1/: ibp.log.out  ibp.wl  reductionDataInfo.log.out  reductionDataInfo.wl  reductionDataInfosup.log.out  reductionDataInfosup.wl  system.json  systemC.json
cache/bub00_scheduled/: status.json
cache/bub00_sectormappings/: maximalcutmasters.log.out  maximalcutmasters.wl  topology.wl
data/: IBPMat_Box.bin.bak  IBPMat_bub11.bin.new  RelationMeta_bub00.m  RingData_Box.bin.bak  RingData_SR212.bin.bak  RingData_TB123.bin.bak  RingData_bub11.bin.new  blade_test.m  blade_test_SR212-3m.m
docs/: AnsatzModes.md  Benchmark_Results.md  CommandGuideline.md  LayerRecursion_Algorithm.md  Plan-FamilyGenerate-CPP-Rewrite.md  Propagators2Graph.md  README.md  ReconstructAlgorithm.md  ReconstructReductionRelation_Documentation.md  RelationSolver_ComponentGuide.md  RelationSolver_Documentation_Hub.md  RelationSolver_QuickReference.md  restructure-plan.md  verify
docs/algorithms/: LayerRecursion_Algorithm.md  ReconstructAlgorithm.md  RegionSolverAlgorithm.md  SymbolicRuleAlgorithm.md
families/: BN3L.json  BN3L1P.json  BN3L1Pm.json  Box.json  DB313-4m.json  DB313.json  DP2L5P.json  DP323.json  FamilyDatabase.wl  HB2L5P.json  LA3L4Pm.json  LB3L4Pm.json  NP222.json  NP222var.json  NP322.json  NP322m.json  PB2L5P.json  Penta1L-5m.json  Penta1L.json  README.md  SR.json  SR212-3m.json  SR212-5m.json  SR212.json  SR3m.json  SR5m.json  TB123.json  TB123m.json  Tri.json  bub00.json  bub10.json  bub11.json
include/: BinaryIBPWriter.hpp  BinaryRingWriter.hpp  Combinatorics.hpp  FamilyConfig.hpp  IBPAnalyzer.hpp  IBPAnalyzer.hpp.bak  IBPAnalyzer.hpp.fix  IBPEqGenerator.hpp  IBPMatrixLoader.hpp  IBPMatrixLoader_Binary.hpp  IncrementDetector.hpp  IncrementalRelationSolver.hpp  LayerRecursion.hpp  LayerRecursionCore.hpp  LayerRecursionCore.tpp  LinearSolver.hpp  LinearSolver_Eigen.hpp  LinearSolver_FF.hpp  ParallelSolver.hpp  PolyArith.hpp  RecursionBuilder.hpp  RegionSolver.hpp  RelationLoader.hpp  RelationRecon.hpp.txt  RelationSolver.hpp  RingBuilder.hpp  RingDataLoader.hpp  SeriesCoefficient.hpp  SeriesCoefficientIO.hpp  SingularRunner.hpp  SymbolicRule.hpp  UnifiedStorage.hpp  Utilities.hpp  ZeroSectorQ.hpp  binomial.hpp  binomial2.hpp  layerRecursion.hpp.txt
include/firefly/: FFInt.hpp
mma/: AllRelationsToNuFormat.wl
notebooks/: test-relation-bub00.nb
relations/: AllRelations_Box_k4.m  AllRelations_Box_k4_Singular.m  AllRelations_Box_k6.m  AllRelations_Box_k6_Singular.m  AllRelations_NP222var_k3.m  AllRelations_Penta1L-5m-MMA_k4.m  AllRelations_Penta1L-5m_k4.m  AllRelations_Penta1L_k4.m  AllRelations_SR212-3m_k4.m  AllRelations_SR212-3m_k5.m  AllRelations_SR212-3m_k6.m  AllRelations_SR212-5m_k4.m  AllRelations_SR212-5m_k5.m  AllRelations_SR212-5m_k6.m  AllRelations_SR212_k4.m  AllRelations_SR212_k5.m  AllRelations_Tri_k2.m  AllRelations_Tri_k4.m  AllRelations_Tri_k6.m  AllRelations_bub00_k4.m  AllRelations_bub00_k5.m  AllRelations_bub00_k6.m  AllRelations_bub10_k2.m  AllRelations_bub10_k4.m  AllRelations_bub10_k6.m  AllRelations_bub11_k2.m  AllRelations_bub11_k4.m  AllRelations_bub11_k6.m  RelationMeta_Box.m  RelationMeta_NP222.m  RelationMeta_Penta1L-5m-MMA.m  RelationMeta_Penta1L-5m.m  RelationMeta_Penta1L.m  RelationMeta_SR212-3m.m  RelationMeta_SR212-5m.m  RelationMeta_SR212.m  RelationMeta_Tri.m  RelationMeta_bub00.m  RelationMeta_bub10.m  RelationMeta_bub11.m
scripts/: ExportReference.wl  GenerateBinFiles.wl  compare_relation_box.sh  compare_relation_box_k2.sh  compare_relation_box_k6.sh  compare_relation_bub00.sh  compare_relation_coeffs.sh
src/: #RelationRecon.cpp.txt  #layerRecursion0.cpp.txt  LayerRecursionCore.cpp  layerRecursion.cpp  main.cpp
tests/: IBPMatrixLoader_Test.cpp  IBPVerification.hpp  RingDataLoader_test.cpp  compare_ringdata_detailed.cpp  debug_region_solver.cpp  layerrecursion_nimax.patch  test_IBPVerification.cpp  test_RelationBub.cpp  test_RelationFF.cpp  test_RelationNew.cpp  test_compare_MMA.cpp  test_expand.cpp  test_expandFF.cpp  test_expand_family.cpp  test_family_config.cpp  test_family_generate.cpp  test_generating_cone.cpp  test_ibp_analyzer.cpp  test_load_bub.cpp  test_poly_arith.cpp  test_recons.cpp  test_recursion_builder.cpp  test_recursion_builder_tri.cpp  test_region_solver_full.cpp  test_relationFF.cpp  test_ring_builder.cpp  verify_MMA_lev1_deg1.cpp  verify_ring_builder.cpp
tools/: diagnose_ibp.cpp  diagnose_ibp_reference.cpp  dump_mma_equations.wl  family_generate.cpp  family_scheduler.py  generating_cone.cpp  test_firefly_simple.cpp  test_region_solver.cpp  test_singular_runner.cpp
verify/: README.md
workspace/: C017-DB313-region-solve-cpp
(+1102 files in other folders)
